--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -1,17 +1,10 @@
 .header {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/hill.jpg');
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
-    height: 100vh;
-}
-
-@media (min-width: 992px) {
-    .navbar {
-        float: right;
-    }
+    z-index: 2000;
 }
 
 .navbar-collapse .navbar-nav .nav-link {
@@ -24,11 +17,66 @@
 @media (max-width: 575px) {
     .navbar-collapse {
         text-align: center;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.9);
         margin-top: 5px;
+        width: 100% !important;
     }
 }
 
-/* .navbar-collapse .navbar-nav .activated {
+@media (max-width: 991px) {
+    .navbar-collapse .navbar-nav .nav-link {
+        padding: 10px !important;
+    }
+}
+
+/* .navbar-collapse .navbar-nav .nav-item a:hover {
     color: #00B0DC;
 } */
+
+.banner {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/hill.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    height: 100vh;
+    width: 100%;
+
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+
+.banner .banner-content {
+    padding-top: 200px;
+    text-align: center;
+}
+
+.banner .banner-content h3 {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+
+    padding: 30px;
+}
+
+.banner .banner-content .img-area {
+    width: 160px;
+    height: 160px;
+
+    margin: auto;
+
+    border-radius: 50%;
+    overflow: hidden;
+
+    border-color: white;
+    border-style: solid;
+    border-width: 4px;
+}
+
+.banner .banner-content .img-area .image {
+    max-width: 100%;
+}
