--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -50,20 +50,11 @@
 
 
 .banner .banner-content {
-    padding-top: 200px;
+    padding-top: 150px;
     text-align: center;
 }
 
-.banner .banner-content h3 {
-    color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 40px;
-
-    padding: 30px;
-}
-
-.banner .banner-content .img-area {
+.banner-content .img-area {
     width: 160px;
     height: 160px;
 
@@ -77,6 +68,84 @@
     border-width: 4px;
 }
 
-.banner .banner-content .img-area .image {
+.banner-content .img-area .image {
     max-width: 100%;
+}
+
+.banner-content h3 {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+
+    padding-top: 30px;
+}
+
+.banner-content .position {
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+}
+
+.banner-content .social ul {
+    list-style-type: none;
+
+    display: flex;
+
+    justify-content: center;
+
+    padding: 0px;
+}
+
+.banner-content .social ul li {
+    margin: 20px 10px;
+
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgba(255, 255, 255, 0.08);
+}
+
+.banner-content .social ul li a {
+    display: inline-block;
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+
+    color: white;
+}
+
+.banner-content .move-down-button a{
+    margin-top: 20px;
+    padding: 0px;
+    position: relative;
+
+    display: inline-block;
+    width: 35px;
+    height: 60px;
+
+    border-style: solid;
+    border-width: 3px;
+    border-color: white;
+    border-radius: 23px;
+}
+
+.banner-content .move-down-button .move-down-point{
+    color: white;
+    position: absolute;
+    display: block;
+    top: 29%;
+    left: 50%;
+    width: 8px;
+    height: 8px;
+    margin: -8px 0 0 -4px;
+    background: #ffffff;
+    border-radius: 50%;
+    animation: move 2s infinite;
+}
+
+@keyframes move
+{
+  0%   {transform: translateY(0px); opacity: 1;}
+  90%  {transform: translateY(30px); opacity: 1;}
+  100% {transform: translateY(30px); opacity: 0;}
 }
