--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -17,7 +17,7 @@
 
 #about .stack-about-image {
     position: absolute;
-    left: 15px;
+    left: 18px;
     top: 3px;
 
     width: 90%;
@@ -39,6 +39,17 @@
 @media (max-width: 991px) {
     #about .about-content {
         padding-left: 20px;
+    }
+
+
+    #about .about-content h2 {
+        padding-top: 40px;
+    }
+}
+
+@media (max-width: 410px) {
+    #about .about-content h2 {
+        font-size: 26px !important;
     }
 }
 
