--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -34,7 +34,7 @@
 } */
 
 .banner {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/hill.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/lake3.jpg');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
