--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -2,6 +2,10 @@
     padding-top: 50px;
 }
 
+#about .row {
+    justify-content: center;
+}
+
 #about .about-image {
     padding: 5px;
 
@@ -13,6 +17,8 @@
     border-style: solid;
     border-width: 1px;
     border-color: rgba(65, 29, 29, 0.3);
+
+    box-shadow: 1px 1px 2px rgba(0,0,0,.25);
 }
 
 #about .stack-about-image {
@@ -30,6 +36,8 @@
     -o-transform: rotate(-5deg);
     -ms-transform: rotate(-5deg);
     transform: rotate(-5deg);
+
+    box-shadow: 1px 1px 2px rgba(0,0,0,.25);
 }
 #about .about-content {
     padding-left: 70px;
