--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -14,6 +14,18 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.navbar-scrolling .navbar-collapse .navbar-nav .nav-link {
+    color: #262626;
+}
+
+.navbar-scrolling {
+    background-color: #fafafa;
+
+    box-shadow: 0 0 10px 0 #000;
+
+    transition: 0.7s;
+}
+
 @media (max-width: 575px) {
     .navbar-collapse {
         text-align: center;
@@ -34,7 +46,7 @@
 } */
 
 .banner {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/lake3.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/mountain.jpg');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
