fix style for all

--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -40,8 +40,10 @@
     box-shadow: 1px 1px 2px rgba(0,0,0,.25);
 }
 #about .about-content {
-    padding-left: 70px;
-    font-family: 'Roboto', sans-serif;
+    padding-left: 50px;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
+    color: #777;
 }
 
 @media (max-width: 991px) {
@@ -57,15 +59,19 @@
 
 @media (max-width: 410px) {
     #about .about-content h2 {
-        font-size: 26px !important;
+        font-size: 23px !important;
     }
 }
 
 #about .about-content h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 30px;
+    color: #262626;
+
+    text-shadow: 3px 1px 3px rgba(45, 45, 45, 0.14);
 
     padding-bottom: 20px;
 }
@@ -92,5 +98,5 @@
 
     padding: 15px 20px;
     
-    border-color: rosybrown;
+    border-color: #00B0DC;
 }
