--- a/src/assets/css/Experience.css
+++ b/src/assets/css/Experience.css
@@ -14,6 +14,8 @@
     letter-spacing: 1px;
     font-weight: 700;
 
+    text-shadow: 3px 1px 3px rgba(45, 45, 45, 0.14);
+
     text-align: center;
 }
 
@@ -31,23 +33,25 @@
     margin-bottom: 30px;
 }
 
-.experience-list .experience-item h3 {
+.experience-list .experience-item h4 {
     margin-bottom: 12px;
 
     color: #333333;
     font-weight: bolder;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    letter-spacing: 1px;
 }
 
-.experience-list .experience-item h4 {
+.experience-list .experience-item h3 {
     margin-bottom: 12px;
 
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 16px;
     color: #00B0DC;
     font-weight: bolder;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 2px;
 }
 
 .experience-list .experience-item h5 {
@@ -55,10 +59,14 @@
 
     color: #333333;
     font-weight: bolder;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
 }
 
 .experience-list .experience-item p {
     line-height: 1.6;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
+    color: #777;
 }
