--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -2,7 +2,7 @@
     background-color: #171717;
     
     color: #777777;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
 
     padding: 30px 0;
