--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -11,7 +11,7 @@
     color: white;
     text-transform: uppercase;
     padding: 20px !important;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .navbar-scrolling .navbar-collapse .navbar-nav .nav-link {
@@ -33,6 +33,28 @@
         margin-top: 5px;
         width: 100% !important;
     }
+
+    .navbar-scrolling .navbar-collapse .navbar-nav .nav-link {
+        color: white;
+    }
+
+    .navbar-toggler {
+        border: none;
+    }
+
+    .navbar-toggler:focus {
+        outline: none;
+    }
+
+    .navbar-dark .navbar-toggler-icon {
+        background-image: url(../images/menu.svg);
+        filter: invert(100%);
+    }
+
+    .navbar-scrolling .navbar-toggler-icon {
+        background-image: url(../images/menu.svg);
+        filter: invert(0%);
+    }
 }
 
 @media (max-width: 991px) {
@@ -41,12 +63,17 @@
     }
 }
 
-/* .navbar-collapse .navbar-nav .nav-item a:hover {
+.navbar-collapse .navbar-nav .nav-item a:hover {
     color: #00B0DC;
-} */
+}
+
+.navbar-collapse .navbar-nav .nav-item a:focus {
+    color: #00B0DC;
+    font-weight: 900;
+}
 
 .banner {
-    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/mountain.jpg');
+    background-image: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url('../images/office.jpg');
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -89,8 +116,7 @@
 
 .banner-content h3 {
     color: white;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
+    font-family: 'Poppins', sans-serif;
     font-size: 40px;
 
     padding-top: 30px;
@@ -98,8 +124,9 @@
 
 .banner-content .position {
     color: white;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 20px;
+    font-weight: lighter;
 }
 
 .banner-content .social ul {
@@ -129,7 +156,13 @@
     color: white;
 }
 
-.banner-content .move-down-button a{
+.banner .move-down-button {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.banner .move-down-button a{
     margin-top: 20px;
     padding: 0px;
     position: relative;
@@ -144,7 +177,7 @@
     border-radius: 23px;
 }
 
-.banner-content .move-down-button .move-down-point{
+.banner .move-down-button .move-down-point{
     color: white;
     position: absolute;
     display: block;
