fix reponsive navbar and format code

--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -27,10 +27,14 @@
 }
 
 @media (max-width: 575px) {
+    .navbar {
+        max-height: 54px;
+    }
+    
     .navbar-collapse {
         text-align: center;
         background-color: rgba(0, 0, 0, 0.9);
-        margin-top: 5px;
+        margin-top: 15px;
         width: 100% !important;
     }
 
