add hobby section

--- a/src/assets/css/Contact.css
+++ b/src/assets/css/Contact.css
@@ -1,6 +1,12 @@
 #contact {
-    background-color: white;
+    background-image: linear-gradient( rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9) ), url('../images/desk2.jpg');
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 
+    width: 100%;
+    
     padding-bottom: 80px;
 }
 
@@ -8,7 +14,7 @@
     padding-top: 80px;
     padding-bottom: 50px;
     
-    color: #262626;
+    color: white;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     letter-spacing: 1px;
@@ -23,20 +29,41 @@
     color: #00B0DC;
 }
 
+@media (max-width: 991px) {
+    .form-group {
+        margin-bottom: 50px;
+    }
+}
+
 .form-group label {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+    color: white;
 }
 
 .form-group input {
     border-radius: 0px;
+
+    color: white;
+
+    background-color: transparent;
 }
 
 .form-group .message-input {
-    height: 250px;
+    height: 215px;
+
+    color: white;
+
+    background-color: transparent;
 
     border-radius: 0px;
+}
+
+.form-group .message-input:focus {
+    background-color: white;
+
+    color: #495057;;
 }
 
 .form-group .send-btn {
@@ -76,7 +103,7 @@
     font-weight: 600;
     font-size: 16px;
     letter-spacing: 2px;
-    color: #333333;
+    color: white;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -84,6 +111,6 @@
     line-height: 21px;
     letter-spacing: 2px;
     font-size: 0.9em;
-    color: #777;
+    color: rgb(168, 168, 168);
     font-family: 'Poppins', sans-serif;
 }
