--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -43,8 +43,9 @@
 #about .about-content {
     padding-left: 50px;
     font-family: 'Poppins', sans-serif;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
     color: #777;
+    font-size: 0.9em;
 }
 
 @media (max-width: 991px) {
