--- a/src/assets/css/Experience.css
+++ b/src/assets/css/Experience.css
@@ -40,7 +40,7 @@
     font-weight: bolder;
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
 }
 
 .experience-list .experience-item h3 {
@@ -55,18 +55,18 @@
 }
 
 .experience-list .experience-item h5 {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 
     color: #333333;
-    font-weight: bolder;
-    font-size: 16px;
+    font-size: 0.9em;
     font-family: 'Poppins', sans-serif;
-    letter-spacing: 1px;
+    letter-spacing: 1.5px;
 }
 
 .experience-list .experience-item p {
     line-height: 1.6;
     font-family: 'Poppins', sans-serif;
-    letter-spacing: 1px;
+    font-size: 0.9em;
+    letter-spacing: 1.5px;
     color: #777;
 }
