--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -1,6 +1,10 @@
 #about .about-section {
     padding-top: 80px;
-    padding-bottom: 50px;
+    padding-bottom: 80px;
+}
+
+#about .about-section .about-content {
+    box-shadow: 0 0 25px rgba(68, 68, 68, 0.07);
 }
 
 #about .row {
@@ -15,11 +19,7 @@
     width: 100%;
     height: auto;
 
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(65, 29, 29, 0.3);
-
-    box-shadow: 1px 1px 2px rgba(0,0,0,.25);
+    box-shadow: 0 0 25px rgba(68, 68, 68, 0.07);
 }
 
 #about .stack-about-image {
@@ -41,27 +41,18 @@
     box-shadow: 1px 1px 2px rgba(0,0,0,.25);
 }
 #about .about-content {
-    padding-left: 50px;
     font-family: 'Poppins', sans-serif;
     letter-spacing: 1.5px;
     color: #777;
     font-size: 0.9em;
+
+    border: none;
+    border-radius: 0px;
 }
 
 @media (max-width: 991px) {
     #about .about-content {
-        padding-left: 20px;
-    }
-
-
-    #about .about-content h2 {
-        padding-top: 40px;
-    }
-}
-
-@media (max-width: 410px) {
-    #about .about-content h2 {
-        font-size: 23px !important;
+        margin-top: 30px;
     }
 }
 
@@ -70,7 +61,7 @@
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: 30px;
+    font-size: 32px;
     color: #262626;
 
     text-shadow: 3px 1px 3px rgba(45, 45, 45, 0.14);
