--- a/src/assets/css/Interests.css
+++ b/src/assets/css/Interests.css
@@ -28,6 +28,8 @@
 
     color: white;
     text-align: center;
+
+    overflow: hidden;
 }
 
 #hobby .hobby-item img {
@@ -55,7 +57,24 @@
 
     opacity: 0;
     transition: 1s ease;
-    background-color: #00B0DC;
+
+    background-color: #20bf55;
+    background-image: linear-gradient(315deg, #20bf55 0%, #01baef 74%);
+}
+
+#hobby .hobby-item .overlay-upper {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: -300px;
+    right: 0;
+    height: 100%;
+    width: 100%;
+
+    opacity: 0;
+
+    transition: 1s ease;
+    background-color: black;
 }
 
 #hobby .hobby-item .overlay .overlay-inner{
@@ -81,6 +100,18 @@
     animation-fill-mode: forwards;  
 }
 
+#hobby .hobby-item:hover .overlay-upper {
+    animation: dash-to-right 0.4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;  
+}
+
+#hobby .hobby-item:not( :hover ) .overlay-upper {
+    animation: dash-to-left 0.4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;  
+}
+
 @keyframes move-down
 {
   from   {transform: translateY(-30px); opacity: 0;}
@@ -89,6 +120,60 @@
 
 @keyframes move-up-back
 {
-  from   {transform: translateY(0px); opacity: 1;}
+  from   {transform: translateY(0px); opacity: 0.8;}
   to  {transform: translateY(-30px); opacity: 0;}
+}
+
+@keyframes dash-to-right
+{
+  from   {transform: translateX(0px) skew(45deg); opacity: 0;}
+  to  {transform: translateX(810px) skew(45deg); opacity: 0.65;}
+}
+
+@keyframes dash-to-left
+{
+  from   {transform: translateX(810px) skew(45deg); opacity: 0.65;}
+  to  {transform: translateX(0px) skew(45deg); opacity: 0;}
+}
+
+@media (max-width: 1199px) {
+    @keyframes dash-to-right
+    {
+        from   {transform: translateX(0px) skew(45deg); opacity: 0;}
+        to  {transform: translateX(700px) skew(45deg); opacity: 0.65;}
+    }
+
+    @keyframes dash-to-left
+    {
+        from   {transform: translateX(700px) skew(45deg); opacity: 0.65;}
+        to  {transform: translateX(0px) skew(45deg); opacity: 0;}
+    }
+}
+
+@media (max-width: 991px) {
+    @keyframes dash-to-right
+    {
+        from   {transform: translateX(0px) skew(45deg); opacity: 0;}
+        to  {transform: translateX(750px) skew(45deg); opacity: 0.65;}
+    }
+
+    @keyframes dash-to-left
+    {
+        from   {transform: translateX(750px) skew(45deg); opacity: 0.65;}
+        to  {transform: translateX(0px) skew(45deg); opacity: 0;}
+    }
+}
+
+@media (max-width: 767px) {
+    @keyframes dash-to-right
+    {
+        from   {transform: translateX(0px) skew(45deg); opacity: 0;}
+        to  {transform: translateX(950px) skew(45deg); opacity: 0.65;}
+    }
+
+    @keyframes dash-to-left
+    {
+        from   {transform: translateX(950px) skew(45deg); opacity: 0.65;}
+        to  {transform: translateX(0px) skew(45deg); opacity: 0;}
+    }
 }
