--- a/src/assets/css/Skills.css
+++ b/src/assets/css/Skills.css
@@ -1,5 +1,7 @@
 #skills .programming-skills {
-    background-color: #f8f8f8;
+    background-color: #fafafa;
+
+    padding-bottom: 80px;
 } 
 
 #skills .programming-skills .title {
@@ -18,8 +20,11 @@
 }
 
 #skills .programming-skills .tech-list {
-    padding-bottom: 50px;
     text-align: center;
+
+    background-color: #fff;
+
+    box-shadow: 0 0 25px rgba(68, 68, 68, 0.07);
 }
 
 #skills .programming-skills .tech-list .tech-icon {
